plugins {
	id 'java'
}

version = '1.0.0'

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.osrsflipfinder.runelite.OsrsFlipFinderPluginTest'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.12'
	testImplementation 'org.mockito:mockito-core:3.12.4'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
}

group = 'com.osrsflipfinder'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.withType(Test).configureEach {
	useJUnit()
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = pluginMainClass

	jvmArgs "-ea",
		"-Dflipx.baseUrl=http://localhost:3000",
		"--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED",
		"--add-opens=java.base/java.net=ALL-UNNAMED",
		"--add-opens=java.base/java.io=ALL-UNNAMED"
	args "--developer-mode", "--debug"
}

tasks.register('installSideloaded', Copy) {
	dependsOn shadowJar
	from shadowJar.archiveFile
	into "${System.getProperty('user.home')}/.runelite/sideloaded-plugins"
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.runtimeClasspath
	manifest {
		attributes('Main-Class': 'com.osrsflipfinder.runelite.OsrsFlipFinderPlugin', 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from {
		configurations.runtimeClasspath.collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}
